clusters/k3s-hetzner/kyverno/policies/pss-baseline.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pss-baseline
spec:
  background: true
  validationFailureAction: Audit
  rules:
    - name: baseline
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        allowExistingViolations: true
        podSecurity:
          level: baseline
          version: latest
